--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
 agora-token-builder==1.0.0
 asgiref==3.7.2
+async-timeout==4.0.3
+channels==4.0.0
+channels-redis==4.1.0
 Django==4.2.4
+msgpack==1.0.5
+redis==4.6.0
 sqlparse==0.4.4
 typing_extensions==4.7.1
