--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ async-timeout==4.0.3
 attrs==23.1.0
 autobahn==23.6.2
 Automat==22.10.0
+boto3==1.28.33
+botocore==1.31.33
 cffi==1.15.1
 channels==4.0.0
 channels-redis==4.1.0
@@ -14,16 +16,22 @@ Django==4.2.4
 hyperlink==21.0.0
 idna==3.4
 incremental==22.10.0
+jmespath==1.0.1
 msgpack==1.0.5
+Pillow==10.0.0
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
 pycparser==2.21
 pyOpenSSL==23.2.0
+python-dateutil==2.8.2
+python-dotenv==1.0.0
 redis==4.6.0
+s3transfer==0.6.2
 service-identity==23.1.0
 six==1.16.0
 sqlparse==0.4.4
 Twisted==22.10.0
 txaio==23.1.1
 typing_extensions==4.7.1
+urllib3==1.26.16
 zope.interface==6.0
