--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 venv/
 zense-project-videocall-recorder_accessKeys.csv
 ZenseProject/.env
+key_and_secret.txt
+zense-project-videocall-recorder_accessKeys.csv
