--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ venv/
 zense-project-videocall-recorder_accessKeys.csv
 key_and_secret.txt
 zense-project-videocall-recorder_accessKeys.csv
+ZenseProject/.env
