--- a/ZenseProject/.env
+++ b/ZenseProject/.env
@@ -4,3 +4,4 @@ APP_ID = 41a16d737c284fadb182676757e070ab
 APP_CERTIFICATE=49a7c4370085482f84c8e839e79ff023
 customerKey = cd59f667dd18444b90508cdf17105741
 customerSecret = 188e65fe83944fad925e16fbe7f1b2f3
+bucket=zense-project-videocall-recording
