fixed run code bug

--- a/ZenseProject/.env
+++ b/ZenseProject/.env
@@ -1,7 +1,7 @@
-Access_key_ID=AKIAY74HYE7CAGCY6KUC
-Secret_access_key=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
-APP_ID = 41a16d737c284fadb182676757e070ab
-APP_CERTIFICATE=49a7c4370085482f84c8e839e79ff023
-customerKey = cd59f667dd18444b90508cdf17105741
-customerSecret = 188e65fe83944fad925e16fbe7f1b2f3
-bucket=zense-project-videocall-recording
+Access_key_ID=
+Secret_access_key=
+APP_ID = 
+APP_CERTIFICATE=
+customerKey = 
+customerSecret =
+bucket=
